--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Fatemaf.GitHub.io</h1>
-      <h2 class="project-tagline">A page about me</h2>
+      <h1 class="project-name">Learn Spanish with me</h1>
+      <h2 class="project-tagline">Educational Spansih Site</h2>
     </section>
 
     <section class="main-content">
