--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learn Spanish with me</h1>
-      <h2 class="project-tagline">Educational Spansih Site</h2>
+      <h2 class="project-tagline">Educational Spanish Site</h2>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>This website will help those who want to learn or improve on the Spanish language.  .</p>
+<p>This website will help those who want to learn or improve on the Spanish language.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
