--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <h3>Spanish Grammar</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Grammar is essential in knowing what to say and how. Using this website you can learn the different tenses, structures and styles of speech  </p>
 
 <h3>Common phrases</h3>
 
