--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h3>Spanish Listening files</h3>
+<h3>Multimedia</h3>
 
-<p> founded GitHub.</p>
+<p>Multimedia is a fun and interactive way of getting to know a language. By using Spanish multimedia you will become more familiarised with the Spanish language</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
