--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 <h3>Multimedia</h3>
 
 <p>Multimedia is a fun and interactive way of getting to know a language. By using Spanish multimedia you will become more familiarised with the Spanish language</p>
+      
+      <!-- this image will be on the left of the page -->
+  <div class="media">
+  
+   <div class="media-left">
+  
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Provinces_of_Spain.svg/2000px-Provinces_of_Spain.svg.png" style="width:700px;">
+  
+
+  
+ </div <!-- end of media left -->
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
