--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     
 
     <section class="main-content">
-      <h3>About</h3>
+      <h3>About Spanish</h3>
 
 
       <footer class="site-footer">
