--- a/links.html
+++ b/links.html
@@ -36,10 +36,10 @@
     <section class="main-content">
       <h3>Useful Links</h3>
       
-      <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
-      <p>http://www.wordreference.com</p>
-        <p>http://studyspanish.com/learn-spanish-free</p>
-          
+     <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
+     <a href="url">http://www.wordreference.com</a>
+     <a href="url">http://studyspanish.com/learn-spanish-free</a>
+     <a href="url">http://www.donquijote.org/spanishlanguage/<a>          
 
 
       <footer class="site-footer">150278083
