--- a/links.html
+++ b/links.html
@@ -38,8 +38,8 @@
       
      <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
      <a href="url">http://www.wordreference.com</a>
-     <a href="url">http://studyspanish.com/learn-spanish-free</a>
-     <a href="url">http://www.donquijote.org/spanishlanguage/<a>          
+     <br> <a href="url">http://studyspanish.com/learn-spanish-free</a>
+     <br> <a href="url">http://www.donquijote.org/spanishlanguage/<a>          
 
 
       <footer class="site-footer">150278083
