--- a/links.html
+++ b/links.html
@@ -37,7 +37,7 @@
       <h3>Useful Links</h3>
       
      <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
-     <a href="url"http://www.wordreference.com> Word Reference will help you with translating certain words and finding out their definition </a>
+     <a href="url"http://www.wordreference.com></a>
      <br> <a href="url">http://studyspanish.com/learn-spanish-free</a>
      <br> <a href="url">http://www.donquijote.org/spanishlanguage/<a>          
 
