--- a/links.html
+++ b/links.html
@@ -38,7 +38,7 @@
       
      <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
      <a href="url">http://www.wordreference.com></a>
-     <br> <a href="url">http://studyspanish.com/learn-spanish-free</a>
+     <br> <a href=http://studyspanish.com/learn-spanish-free>StudySpanish</a>
      <br> <a href="url">http://www.donquijote.org/spanishlanguage/<a>          
 
 
