--- a/links.html
+++ b/links.html
@@ -39,8 +39,8 @@
      <p>Here are some useful links that will help you improve the level of your Spanish knowledge</p>
      <a href=http://www.wordreference.com>Word Reference</a>
      <br> <a href=http://studyspanish.com/learn-spanish-free>Study Spanish</a>
-     <br> <a href=http://www.donquijote.org/spanishlanguage/>Don Quijote<a>    
-      <br> <a href=http://www.conjugation.org>Conjugation<a> 
+      <br> <a href=http://www.donquijote.org/spanishlanguage/>Don Quijote</a>    
+      <br> <a href=http://www.conjugation.org>Conjugation</a> 
       <br> <p> These websites include dictionaries to aid you with translation and definition of Spanish terms in addition to useful grammar information </p>
       
       <footer class="site-footer">150278083
