--- a/multimedia.html
+++ b/multimedia.html
@@ -44,7 +44,7 @@
         your browser does not support the audio element.
       </audio>
    
-      <p>Here is a short video clip showing the main Spanish dishes and their accompanying name</p>
+      <p>Here is a short video clip showing two Spanish foods</p>
       
       <iframe width="520" height="293" src="https://www.youtube.com/embed/ntOVUZhTyeI" frameborder="0" allowfullscreen></iframe>
       
