--- a/grammar.html
+++ b/grammar.html
@@ -48,7 +48,7 @@
        <br> Hace - He/She/It does (These first 3 are Singular)
        <br> Hacemos - We do
        <br> Haceis - You (lot) do
-       <br> Haceron - They do (These last 3 are plural) 
+       <br> Haceron - They do (These last 3 are plural)</p>
 
 
       <footer class="site-footer"> 150278083
