--- a/links.html
+++ b/links.html
@@ -42,6 +42,7 @@
       <br> <a href=http://www.donquijote.org/spanishlanguage/>Don Quijote</a>    
       <br> <a href=http://www.conjugation.org>Conjugation</a> 
       <br> <p> These websites include dictionaries to aid you with translation and definition of Spanish terms in addition to useful grammar information </p>
+    <p>Good luck! :D</p>
       
       <footer class="site-footer">150278083
 
