--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
     <section class="main-content">
       <h3>About Spanish</h3>
       
-      <p> The Spanish language is one of the most spoken languages in the world! It is of course the main language utlised in Spain but also in Latin/South America. This makes it an extremely useful language and should get you motivated to start learning :) </p>
-      <p> In addition to that, the Spanish culture contains a variety of activities and celebrations which are very fun and diverse! The delicious cuisine, lively lifestyle and beautiful attractions makes Spain a great tourist spot and I would encourage you all to visit and gain a better understanding of the lovely Spanish culture. I'm sure it would be loads of fun!<p>
+      <p> The Spanish language is one of the most spoken languages in the world! It is of course the main language utilised in Spain but also in South America. This makes it an extremely useful language and should get you motivated to start learning :) </p>
+      <p> In addition to that, the Spanish culture contains a variety of activities and celebrations which are very fun and diverse! The delicious cuisine, lively lifestyle and beautiful attractions makes Spain a great tourist spot and I would encourage you all to visit and gain a better understanding of the lovely Spanish culture. I'm sure it would be loads of fun! Check out the video below to find out some interesting facts about Spain <p>
 
         
        <iframe width="560" height="315" src="https://www.youtube.com/embed/-pmn3lBcwAA" frameborder="0" allowfullscreen></iframe>
