--- a/grammar.html
+++ b/grammar.html
@@ -41,7 +41,7 @@
       <a data-flickr-embed="true"  href="https://www.flickr.com/photos/austinaronoff/17060064035" title="Spanish Verb Conjugation"><img src="https://c1.staticflickr.com/9/8819/17060064035_4679559891.jpg" width="500" height="287" alt="Spanish Verb Conjugation"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
       
       <p>In Spanish, Verb Infinitives such as To Be or To Do usually end in -ER, -AR or -IR.
-        <br> Therfore, the main rule for Infinitive verbs to become a different tense, you usually remove the ending Ar, Ir or Er and replace them with the specific ending for the certain tense. </p>
+        <br> Therfore, in order to make an Infinitive Verb become part of a different  Verb Tense, you remove the the Verb Ending (Ar, Ir or Er) and replace them with the Verb Ending for the specific tense. </p>
      <p> For example, for the verb To Do - Hacer:
        <br> Hago - I do
        <br> Haces - You do
