--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learn Spanish With Me</h1>
-      <h2 class="project-tagline">Educational Spanish Site</h2>
+      <h2 class="project-tagline">Educational Language Learning Website</h2>
   
       <a href="index.html" class="btn">Home</a>
     
